ventilator first draft done!

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img src="./assets/images/laparoscopiX.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">ARISE: Surgical Education</div>
-              <div class="body-text project-card-text">ARISE is a non-profit start-up that I co-founded to revolutionize surgical education through our suite of surgical training products, LaparoscopiX.</div>
+              <div class="body-text project-card-text">ARISE is a non-profit start-up that I co-founded to revolutionize surgical education through LaparoscopiX, our suite of surgical training products.</div>
             </div>
             <a class="button" href="./project-pages/arise.html">
               <span class="button-text">Read More</span>
