--- a/project-pages/ventilator.html
+++ b/project-pages/ventilator.html
@@ -51,35 +51,35 @@
 
             <div class="gallery-image-container">
               <img src="../assets/images/v1_planning.jpg" class="gallery-image">
-              <span class="image-caption">v1 planning</span>
+              <span class="image-caption">This was when we were in the planning phase of the ventilator. I had gathered some materials from around the lab, and threw them together to give my team a quick visual of what this ventilation system could look like and be made out of.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/v1_inlet.jpg" class="gallery-image">
-              <span class="image-caption">v1 inlet</span>
+              <span class="image-caption">This is the inlet of the first version of the ventilator. The ventilator was provided air through a standard shop air compresser, because of this, we had to regulate the amount of pressure coming into our system through a hand controlled valve (far right blue and black valve). Next is the solenoid that was controlled by the electronics board to time the inspiratory breath (large black valve). Finally, there was a manual on/off valve after the solenoid valve for safety purposes (valve with blue knob).</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/v1.jpg" class="gallery-image">
-              <span class="image-caption">v1</span>
+              <span class="image-caption">This is what the first version of the ventilator looked like. Our undergraduate team worked tirelessly to get this working in under 2 weeks. It was controlled by an Arduino Uno and some very basic code at this point. Much of the system was held together with clamps and tape to get an initial prototype working. In this prototype, we used a nitrile glove as the simulated lung model.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/diy_peep.jpg" class="gallery-image">
-              <span class="image-caption">diy peep valve</span>
+              <span class="image-caption">All ventilation systems require a PEEP valve. PEEP stands for positive end-expiratory pressure, and it is necessary to ensure that the alveoli remains inflated during ventilation. When we started prototyping, we did not have the specialized valve, however, we realized that we could use a simple bucket of water with the expiratory tube submerged to generate the same pressure as the PEEP valve.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/peep.jpg" class="gallery-image">
-              <span class="image-caption">peep valve</span>
+              <span class="image-caption">This is a PEEP valve we were able to get our hands on. It was attached to the system initially through duct tape, however, in the later stages of the project this was replaced with a more secure attachment.</span>
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/final_electronics.jpg" class="gallery-image">
-              <span class="image-caption">final electronics</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/project_planning1.jpg" class="gallery-image">
-              <span class="image-caption">project planning 1</span>
+              <span class="image-caption">This is what the final ventilation system looked like after a month of rapid prototyping. It was compatible with standard tubing typically used with hospital ventilators, and had a more realistice simulated lung model. There were also additional sensors added that could measure the pressue, temperature, and humidity of the breath being delivered to the simulated lung model.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/project_planning2.jpg" class="gallery-image">
-              <span class="image-caption">project planning 2</span>
+              <span class="image-caption">This was some planning we did as we worked through the initial stages of the ventilator design. Here we were trying to find out the diameter of hospital tubing used in their ventilators. We were also narrowing down typical ventilator metrics such as tidal volume (TV), peak inspiratory pressure (PIP), respiratory rate (RR), inspiratory time (I), and PEEP. </span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/project_planning1.jpg" class="gallery-image">
+              <span class="image-caption">This is some more planning we did as we worked through the initial stages of the ventilator design. This was only two days later, and we in that time we had began to plan out what the ventilator should look like and how we could integrate the metrics that we defined in the prior planning session.</span>
             </div>
         </div>
       </div>
