--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+          <div class="project-card">
+            <img src="./assets/images/laparoscopiX.png" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">test</div>
+              <div class="body-text project-card-text">test</div>
+            </div>
+            <a class="button" href="./project-pages/project-template.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
         </div>
       </div>
     </div>
