--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/laparoscopiX.png" class="project-image">
+            <img src="./assets/images/lap_box_v1.1.png" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">test</div>
-              <div class="body-text project-card-text">test</div>
+              <div class="subheader-text project-title">Laparoscopic Training Box</div>
+              <div class="body-text project-card-text">Coming Soon.</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
