--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Translating experience to innovation, I am Braden Barlean.</span>
+              <span class="main-title">Translating experience to innovation.</span>
               <div class="body-text">I am a biomedical engineer with a passion for saving lives, and I am seeking opportunities to gain experience in professional climates within medical device design to get a more comprehensive understanding of the full product lifecycle.</div>
             </div>
             <a class="button" id="my-work-link">
