updated youtube link

--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -89,7 +89,7 @@
       <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/bradenbarlean/">
         <image src="../assets/icons/linkedin2.svg" class="footer-icon"/>
       </a>
-      <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
+      <a class="icon-link" target="_blank" href="https://www.youtube.com/@braden5790">
         <image src="../assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
       <a class="icon-link" target="_blank" href="https://www.instagram.com/bradens3dprints/">
