--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
+      <a class="icon-link" target="_blank" href="https://www.youtube.com/@braden5790">
         <image src="./assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
       <a class="icon-link" target="_blank" href="https://www.instagram.com/bradens3dprints/">
