--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Translating experience to innovation.</span>
-              <div class="body-text">I am a biomedical engineer with a passion for saving lives, and I am seeking opportunities to gain experience in professional climates within medical device design to get a more comprehensive understanding of the full product lifecycle.</div>
+              <div class="body-text">As a dedicated design engineer, I am passionate about creating innovative, efficient, and impactful solutions. My portfolio showcases my journey of transforming concepts into functional designs, emphasizing precision, creativity, and problem-solving. I am seeking opportunities to further develop my design skills, collaborate on challenging projects, and contribute to meaningful advancements in engineering.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
